--- a/src/main/resources/com/sau/bankproject/hello-view.fxml
+++ b/src/main/resources/com/sau/bankproject/hello-view.fxml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.sau.bankproject.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="340.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sau.bankproject.Controller.MainController">
+    <tabs>
+        <Tab text="Account">
+            <content>
+                <fx:include source="Account.fxml" />
+            </content>
+        </Tab>
+        <Tab text="Customer">
+            <content>
+                <fx:include source="Customer.fxml" />
+            </content>
+        </Tab>
+        <Tab text="Depositor">
+            <content>
+                <fx:include source="Depositor.fxml" />
+            </content>
+        </Tab>
+    </tabs>
+</TabPane>
