--- a/src/main/resources/com/sau/bankproject/Depositor.fxml
+++ b/src/main/resources/com/sau/bankproject/Depositor.fxml
@@ -8,11 +8,22 @@
             fx:controller="com.sau.bankproject.Controller.DepositorController"
             prefHeight="220.0" prefWidth="350.0">
     <children>
-        <Label layoutX="20.0" layoutY="20.0" text="Customer ID:" />
-        <TextField fx:id="customerIdField" layoutX="100.0" layoutY="16.0" prefWidth="160.0" promptText="Müşteri ID girin" />
-        <Button layoutX="270.0" layoutY="16.0" mnemonicParsing="false" onAction="#getCustomerAccounts" text="GET" />
+        <!-- Customer ID satırı -->
+        <Label layoutX="10.0" layoutY="20.0" text="Customer ID:" />
+        <TextField fx:id="customerIdField" layoutX="100.0" layoutY="16.0" prefWidth="130.0" promptText="Müşteri ID" />
+        <Button layoutX="240.0" layoutY="16.0" mnemonicParsing="false" onAction="#getCustomerAccounts" text="GET" />
 
-        <Label layoutX="20.0" layoutY="55.0" text="Müşterinin Hesapları:" />
-        <ListView fx:id="accountsListView" layoutX="20.0" layoutY="75.0" prefHeight="120.0" prefWidth="310.0" />
+        <!-- Account ID satırı -->
+        <Label layoutX="10.0" layoutY="55.0" text="Account ID:" />
+        <TextField fx:id="accountIdField" layoutX="100.0" layoutY="51.0" prefWidth="130.0" promptText="Hesap ID" />
+        <Button layoutX="240.0" layoutY="51.0" mnemonicParsing="false" onAction="#addDepositor" text="ADD" />
+        <Button layoutX="280.0" layoutY="51.0" mnemonicParsing="false" onAction="#removeDepositor" text="DEL" />
+
+        <!-- Liste -->
+        <Label layoutX="10.0" layoutY="110.0" text="Müşterinin Hesapları:" />
+        <ListView fx:id="accountsListView" layoutX="10.0" layoutY="125.0" prefHeight="85.0" prefWidth="320.0" />
+
+        <!-- Clear butonu -->
+        <Button layoutX="270.0" layoutY="88.0" mnemonicParsing="false" onAction="#clearDepositor" text="CLEAR" />
     </children>
 </AnchorPane>
